# tiralabra-knn

./: .coverage  .coveragerc  .env  .env.test  .gitignore  .pylintrc  README.md  mnist_get_data.sh  pyproject.toml  tasks.py
dokumentaatio/: README.md  ToDo.md  manuaali.md  testaus.md  toteutus.md  tuntikirjanpito.md  viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md  viikkoraportti_7.md
src/: KNN.py  arrays.py  config.py  datahandler.py  directedhausdorff.py  index.py  main.py  mnistdata.py  read_mnist.py  testcases.py  timer.py  undirectedhausdorff.py  utils.py
src/tests/: KNN_test.py  datahandler_test.py  directedhausdorff_test.py  mnistdata_test.py  read_mnist_test.py  undirectedhausdorff_test.py  utils_test.py
src/ui/: load_view.py  param_view.py  result_view.py  set_param_view.py  ui.py
